--- a/src/Components/Navbar/style.css
+++ b/src/Components/Navbar/style.css
@@ -1,6 +1,7 @@
 .Navbar {
   display: flex;
   align-items: center;
+  padding: 0 15px;
 }
 
 .navbar-right-part {
@@ -8,7 +9,7 @@
   justify-content: space-between;
   align-items: center;
   width: 40%;
-  padding: 10px;
+  padding: 10px 0;
 }
 
 .navbar-left-part {
