--- a/src/Components/Navbar/style.css
+++ b/src/Components/Navbar/style.css
@@ -20,3 +20,8 @@
   font-family: sans-serif;
   cursor: pointer;
 }
+
+.underlined {
+  text-decoration: underline;
+  text-underline-offset: 10px;
+}
