added task box component

--- a/src/Pages/MyTasks/style.css
+++ b/src/Pages/MyTasks/style.css
@@ -1,3 +1,16 @@
 .MyTasks {
   height: 95vh;
+  margin: 0 20px;
+}
+
+.mytasks-text {
+  font-size: 40px;
+  font-family: sans-serif;
+  margin: 20px 0;
+}
+
+.search-area {
+  display: flex;
+  width: 400px;
+  justify-content: space-between;
 }
