added more tasks and designed the area where the task boxes appear

--- a/src/Pages/MyTasks/style.css
+++ b/src/Pages/MyTasks/style.css
@@ -14,3 +14,10 @@
   width: 400px;
   justify-content: space-between;
 }
+.task-boxes {
+  width: 60%;
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
