--- a/src/Components/TaskBox/style.css
+++ b/src/Components/TaskBox/style.css
@@ -1,11 +1,17 @@
 .TaskBox {
-  width: 200px;
+  width: 320px;
   font-family: sans-serif;
   padding: 20px;
-  height: 150px;
+  height: 240px;
+  font-size: 30px;
   margin: 30px 30px 30px 0;
+  cursor: pointer;
 }
 
-.textbox-category {
+.taskbox-text {
+  height: 80%;
+}
+
+.taskbox-category {
   text-align: end;
 }
