--- a/src/Pages/MyTasks/style.css
+++ b/src/Pages/MyTasks/style.css
@@ -1,5 +1,5 @@
 .MyTasks {
-  height: 95vh;
+  min-height: 100vh;
   margin: 0 20px;
 }
 
@@ -15,7 +15,8 @@
   justify-content: space-between;
 }
 .task-boxes {
-  width: 60%;
+  width: 90%;
+
   margin: 20px 0;
   display: flex;
   justify-content: space-between;
