made everything a little more responsive on smaller devices

--- a/src/Components/Dropdown/style.css
+++ b/src/Components/Dropdown/style.css
@@ -10,3 +10,9 @@
   border: none;
   outline: none;
 }
+
+@media screen and (max-width: 850px) {
+  .Dropdown {
+    display: none !important;
+  }
+}
